Fix: Mobile menu getting behind page content

--- a/src/components/shared/Menu.module.sass
+++ b/src/components/shared/Menu.module.sass
@@ -52,6 +52,7 @@
                 position: absolute 
                 top: 100%
                 left: 0
+                z-index: 100
 
                 background: rgba(0, 0, 0, .5)
                 transform: translateX(100%)
@@ -63,6 +64,7 @@
                     height: auto
                     background: #0d0d0d
                     padding: 3rem
+                    gap: 0
 
                     flex-direction: column
 
