--- a/src/components/shared/NavLi.module.sass
+++ b/src/components/shared/NavLi.module.sass
@@ -44,5 +44,6 @@
             &.active 
                 &::after 
                     opacity: 1
+                    position: static
 
     
